--- a/day-2/src/App.css
+++ b/day-2/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+body{
+  background-color:grey;
+}
+
 
 .App-header {
   height: 150px;
@@ -13,3 +17,13 @@
   font-size: large;
 }
 
+
+ul#social-media{
+  text-align: center;
+  margin: 0 auto;
+}
+
+li {
+display:inline-block;
+
+}
